loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: not found: value X
X=getX()
^LoopStairs:2: error: not found: value Y
Y=getY()
^LoopStairs:3: error: not found: value X
while (X!=14) & (Y!=8){
       ^LoopStairs:3: error: not found: value &
while (X!=14) & (Y!=8){
              ^LoopStairs:3: error: not found: value Y
while (X!=14) & (Y!=8){
                 ^LoopStairs:8: error: not found: value X
    X=getX()
    ^LoopStairs:9: error: not found: value Y
    Y=getY()
    ^LoopStairs:16: error: not found: value X
    X=getX()
    ^LoopStairs:17: error: not found: value Y
    Y=getY()
    ^